# my-profile

./: .gitignore  .vercelignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
app/: globals.css  layout.tsx  page.tsx
app/api/studio/bucket/: route.ts
app/api/studio/crawl/: route.ts
app/ideas/: layout.tsx  page.tsx
app/learning/: page.tsx
app/news/: page.tsx
app/projects/: page.tsx
app/studio/: layout.tsx  page.tsx
components/icons/: SocialIcon.tsx
components/ideas/: IdeaCard.tsx  IdeasContent.tsx
components/layout/: Footer.tsx  Nav.tsx  NavLinks.tsx
components/learning/: LearningCard.tsx  LearningContent.tsx
components/news/: NewsCard.tsx  NewsContent.tsx
components/profile/: Bio.tsx  Hero.tsx  SocialLinks.tsx  Stack.tsx
components/projects/: ProjectCard.tsx
components/studio/: ApprovalBucket.tsx  GeneratePanel.tsx  ReviewQueue.tsx  SourcesPanel.tsx
components/ui/: EmptyState.tsx  FilterBar.tsx
data/: learning.json  news.json
docs/: ARCHITECTURE.md  CLAUDE_CODE_CAPABILITIES.md  CLAUDE_CODE_PRACTICES.md  PIPELINE.md  PRD.md  PROGRESS.md  ROADMAP.md
lib/: constants.ts  projects.ts  studio-io.ts  types.ts
pipeline/: config.py  run.py
pipeline/crawler/: base.py  github.py  manual.py  rss.py  youtube.py
pipeline/digest/: dedup.py  ollama_client.py  summarizer.py
pipeline/generate/: ideas.py  learning.py  news.py
pipeline/utils/: crawl_cursor.py  file_io.py  logger.py  schemas.py
sources/: config.yaml  manual.yaml
types/: sources.ts
(+5 files in other folders)
